fix white space in chat when load more button is visible

--- a/isabella-discord.css
+++ b/isabella-discord.css
@@ -45,6 +45,7 @@ body {
     margin-left: 2ch;
     text-indent: -3ch;
 }
+.hasMore-3e72_v {padding-top: 120pt;}
 .dividerEnabled-2TTlcf {display: none;}
 .messageEditorCompact-2PSR3v {
     margin-right: 1%;
